--- a/appmanifest.json
+++ b/appmanifest.json
@@ -5,7 +5,7 @@
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "portrait",
-	"background_color": "#ffffff",
+	"background_color": "#31426a",
 	"icons": [
 		{
 			"src": "icons/icon-16.png",
@@ -32,5 +32,6 @@
 			"sizes": "256x256",
 			"type": "image/png"
 		}
-	]
+	],
+	"theme_color": "#31426a"
 }
